--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,11 @@ repos:
         args: [--autofix, --no-sort-keys]
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: check-added-large-files
+      - id: check-docstring-first
+      - id: debug-statements
+      - id: mixed-line-ending
+      - id: check-executables-have-shebangs
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: "v0.14.4"
@@ -20,3 +25,29 @@ repos:
       - id: ruff-check
         args: [ --exit-non-zero-on-fix ]
       - id: ruff-format
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.11.2"
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-all]
+        args: [--ignore-missing-imports, --no-strict-optional]
+        exclude: ^(tests/|examples/)
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: "1.7.9"
+    hooks:
+      - id: bandit
+        args: ["-r", "src/", "-f", "json", "-o", "bandit-report.json"]
+        exclude: ^tests/
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest with coverage
+        entry: bash -c 'uv run pytest --cov=src/simlx --cov-report=term-missing --cov-report=xml --cov-fail-under=80 -v --tb=short'
+        language: system
+        types: [python]
+        pass_filenames: false
+        always_run: true
+        require_serial: true
