Fix mypy pre-commit hook by removing types-all dependency
- Remove types-all which has broken dependencies (types-pkg-resources)
- Use minimal mypy configuration without additional type stubs
- Add --follow-imports=silent to reduce import errors
- Fixes CI failure in make check

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,8 +30,8 @@ repos:
     rev: "v1.11.2"
     hooks:
       - id: mypy
-        additional_dependencies: [types-all]
-        args: [--ignore-missing-imports, --no-strict-optional]
+        additional_dependencies: []
+        args: [--ignore-missing-imports, --no-strict-optional, --follow-imports=silent]
         exclude: ^(tests/|examples/)
 
   - repo: https://github.com/PyCQA/bandit
