--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = [{ name = "Petrus Zwart", email = "phzwart@lbl.gov" }]
 readme = "README.md"
 keywords = ['python']
 requires-python = ">=3.9,<4.0"
+dependencies = [
+    "torch>=2.0.0",
+]
 classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python",
