Fix linting and type checking errors
- Replace assert statements with if/raise for better error handling
- Fix torch.device default arguments (use None and set inside function)
- Combine nested if statements in matryoshka_unet validation
- Add noqa comments for acceptable complexity (C901)
- Fix mypy errors in clearml_adapter and tracking __init__
- Fix bandit configuration to use correct path
- Auto-fix type annotations (Dict->dict, List->list, Optional->|None)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
     rev: "1.7.9"
     hooks:
       - id: bandit
-        args: ["-r", "src/", "-f", "json", "-o", "bandit-report.json"]
+        args: ["-r", "src/simlx", "-f", "json", "-o", "bandit-report.json"]
         exclude: ^tests/
 
   - repo: local
