Fix bandit pre-commit hook configuration
- Use files pattern instead of args to specify target directory
- Fixes bandit error about unrecognized arguments

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,8 @@ repos:
     rev: "1.7.9"
     hooks:
       - id: bandit
-        args: ["-r", "src/simlx", "-f", "json", "-o", "bandit-report.json"]
+        args: ["-r", ".", "-f", "json", "-o", "bandit-report.json"]
+        files: ^src/simlx/.*\.py$
         exclude: ^tests/
 
   - repo: local
