--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
     rev: "1.7.9"
     hooks:
       - id: bandit
-        args: ["-r", ".", "-f", "json", "-o", "bandit-report.json"]
+        args: ["-f", "json", "-o", "bandit-report.json"]
         files: ^src/simlx/.*\.py$
         exclude: ^tests/
 
