Fix mkdocs cyclic alias error
- Create missing __init__.py files for models and data modules
- Fix type annotation for **kwargs in normalization.py
- Update mkdocs configuration to resolve module paths correctly
- Update modules.md to document specific submodules
- Fix docstring example to avoid false cross-reference warning

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,16 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
-          paths: ["src/simlx"]
+          paths: ["src"]
+          options:
+            show_source: false
+            show_root_heading: true
+            show_root_toc_entry: true
+            filters: ["!^_"]
+            members_order: alphabetical
+            docstring_style: google
+            docstring_options:
+              ignore_init_summary: true
 theme:
   name: material
   feature:
