--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,22 @@ Homepage = "https://phzwart.github.io/simlx/"
 Repository = "https://github.com/phzwart/simlx"
 Documentation = "https://phzwart.github.io/simlx/"
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.2.0",
+    "pytest-cov>=4.0.0",
+    "pre-commit>=2.20.0",
+    "tox-uv>=1.11.3",
+    "deptry>=0.23.0",
+    "ty>=0.0.1a16",
+    "ruff>=0.11.5",
+    "mypy>=1.11.0",
+    "bandit>=1.7.9",
+    "mkdocs>=1.4.2",
+    "mkdocs-material>=8.5.10",
+    "mkdocstrings[python]>=0.26.1",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=7.2.0",
