Fix version extraction in release workflow
- Properly extract version from release tag
- Strip 'v' prefix from tag (e.g., v0.1.0 -> 0.1.0)
- Fix GITHUB_REF parsing for release events

--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -11,16 +11,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Export tag
+      - name: Export tag and extract version
         id: vars
-        run: echo tag=${GITHUB_REF#refs/*/} >> $GITHUB_OUTPUT
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          VERSION=${TAG#v}  # Remove 'v' prefix if present
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
         if: ${{ github.event_name == 'release' }}
 
       - name: Update project version
         run: |
           sed -i "s/^version = \".*\"/version = \"$RELEASE_VERSION\"/" pyproject.toml
         env:
-          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+          RELEASE_VERSION: ${{ steps.vars.outputs.version }}
         if: ${{ github.event_name == 'release' }}
 
       - name: Upload updated pyproject.toml
